# OnnxRunner

./: .gitignore  CMakeLists.txt  build.sh  environment.yml  readme.md  requirements.txt  test.sh
.github/workflows/: test_and_build.yml
deploy/: config.py  onnx_profile.ipynb  onnx_profile.py  start.py  yolo.py
deploy/model_data/: models.onnx
deploy/onnx_runner/detector/: onnx_detector.py  pool.py
deploy/onnx_runner/feature/: feature.py
deploy/onnx_runner/log4py/: __init__.py  log.py
deploy/onnx_runner/repository/: obj_repository.py  remote_client.py  repository.py  video_repo.py
deploy/onnx_runner/source/: dir_img.py  source.py  video.py
deploy/utils/: utils_bbox.py
src/: CMakeLists.txt  main.cpp
src/log4cxx/: CMakeLists.txt  Log4Cxx.cpp  Log4Cxx.h  log.h  log4cxx.cpp
tests/: CMakeLists.txt
tests/include/: catch.hpp
tests/opencv/: CMakeLists.txt  OpenCVTest.cpp  main-test.cpp
